--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/rupify
+# This env file should be checked into source control
+# This is the place for default values for all environments
+# Values in `.env.local` and `.env.production` will override these values
